z-index to display notes and modal correctly

--- a/src/NoteApp.css
+++ b/src/NoteApp.css
@@ -72,6 +72,7 @@ body {
   flex-wrap: wrap;
   justify-content: center;
   margin-top: 20px;
+  z-index: 9;
 }
 
 .note-title {
